--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "extern/vulkan"]
 	path = extern/vulkan
 	url = https://github.com/SaschaWillems/Vulkan
+[submodule "extern/entt"]
+	path = extern/entt
+	url = https://github.com/skypjack/entt
+[submodule "extern/ctpl"]
+	path = extern/ctpl
+	url = https://github.com/vit-vit/CTPL
