--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -1,224 +1,235 @@
-option(option_example "Build_Example" OFF)
-if(option_example)
-	add_subdirectory(vulkan)
-	set(EXAMPLES
-	bloom
-	computecloth
-	computecullandlod
-	computeheadless
-	computenbody
-	computeparticles
-	computeraytracing
-	computeshader
-	conditionalrender
-	conservativeraster
-	debugmarker
-	deferred
-	deferredmultisampling
-	deferredshadows
-	descriptorindexing
-	descriptorsets
-	displacement
-	distancefieldfonts
-	dynamicuniformbuffer
-	gears
-	geometryshader
-	gltfloading
-	gltfscenerendering
-	gltfskinning
-	hdr
-	imgui
-	indirectdraw
-	inlineuniformblocks
-	inputattachments
-	instancing
-	multisampling
-	multithreading
-	multiview
-	negativeviewportheight	
-	occlusionquery
-	offscreen
-	oit
-	parallaxmapping
-	particlefire
-	pbrbasic
-	pbribl
-	pbrtexture
-	pipelines
-	pipelinestatistics
-	pushconstants
-	pushdescriptors
-	radialblur
-	rayquery
-	raytracingbasic
-	raytracingcallable
-	raytracingreflections
-	raytracingshadows	
-	renderheadless
-	screenshot
-	shadowmapping
-	shadowmappingomni
-	shadowmappingcascade
-	specializationconstants
-	sphericalenvmapping
-	ssao
-	stencilbuffer
-	subpasses
-	terraintessellation
-	tessellation
-	textoverlay
-	texture
-	texture3d
-	texturearray
-	texturecubemap
-	texturecubemaparray
-	texturemipmapgen
-	texturesparseresidency
-	triangle
-	variablerateshading
-	viewportarray
-	vulkanscene
-	)
-	set_property(TARGET ${EXAMPLES} PROPERTY FOLDER "Example")
-else()
-#######################
-	include_directories(vulkan/external)
-	include_directories(vulkan/external/glm)
-	include_directories(vulkan/external/gli)
-	include_directories(vulkan/external/imgui)
-	include_directories(vulkan/external/tinygltf)
-	include_directories(vulkan/external/ktx/include)
-	include_directories(vulkan/external/ktx/other_include)
-	include_directories(vulkan/base)
+option(build_example "Build_Example" OFF)
+#####################
 
-	OPTION(USE_D2D_WSI "Build the project using Direct to Display swapchain" OFF)
-	OPTION(USE_DIRECTFB_WSI "Build the project using DirectFB swapchain" OFF)
-	OPTION(USE_WAYLAND_WSI "Build the project using Wayland swapchain" OFF)
+include_directories(vulkan/external)
+include_directories(vulkan/external/glm)
+include_directories(vulkan/external/gli)
+include_directories(vulkan/external/imgui)
+include_directories(vulkan/external/tinygltf)
+include_directories(vulkan/external/ktx/include)
+include_directories(vulkan/external/ktx/other_include)
+include_directories(vulkan/base)
 
-	set(RESOURCE_INSTALL_DIR "" CACHE PATH "Path to install resources to (leave empty for running uninstalled)")
+OPTION(USE_D2D_WSI "Build the project using Direct to Display swapchain" OFF)
+OPTION(USE_DIRECTFB_WSI "Build the project using DirectFB swapchain" OFF)
+OPTION(USE_WAYLAND_WSI "Build the project using Wayland swapchain" OFF)
 
-	# Use FindVulkan module added with CMAKE 3.7
-	if (NOT CMAKE_VERSION VERSION_LESS 3.7.0)
-		message(STATUS "Using module to find Vulkan")
-		find_package(Vulkan)
-	endif()
+set(RESOURCE_INSTALL_DIR "" CACHE PATH "Path to install resources to (leave empty for running uninstalled)")
 
-	IF(UNIX AND NOT APPLE)
-		set(LINUX TRUE)
-	ENDIF()
+# Use FindVulkan module added with CMAKE 3.7
+if (NOT CMAKE_VERSION VERSION_LESS 3.7.0)
+	message(STATUS "Using module to find Vulkan")
+	find_package(Vulkan)
+endif()
 
-	IF(WIN32)
-		IF (NOT Vulkan_FOUND)
-			find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/libs/vulkan)
-			IF (Vulkan_LIBRARY)
-				set(Vulkan_FOUND ON)
-				MESSAGE("Using bundled Vulkan library version")
-			ENDIF()
-		ENDIF()
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
-	ELSEIF(LINUX)
-		IF (NOT Vulkan_FOUND)
-			find_library(Vulkan_LIBRARY NAMES vulkan HINTS "$ENV{VULKAN_SDK}/lib" "${CMAKE_SOURCE_DIR}/libs/vulkan" REQUIRED)
-			IF (Vulkan_LIBRARY)
-				set(Vulkan_FOUND ON)
-				MESSAGE("Using bundled Vulkan library version")
-			ENDIF()
-		ENDIF()
-		find_package(Threads REQUIRED)
-		IF(USE_D2D_WSI)
-			MESSAGE("Using direct to display extension...")
-			add_definitions(-D_DIRECT2DISPLAY)
-		ELSEIF(USE_DIRECTFB_WSI)
-			find_package(DirectFB REQUIRED)
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_DIRECTFB_EXT")
-			include_directories(${DIRECTFB_INCLUDE_DIR})
-		ELSEIF(USE_WAYLAND_WSI)
-			find_program(PKG_CONFIG pkg-config)
-			if (NOT PKG_CONFIG)
-				message(FATAL_ERROR "pkg-config binary not found")
-			endif ()
-			find_package(Wayland REQUIRED)
-			if (NOT WAYLAND_FOUND)
-				message(FATAL_ERROR "Wayland development package not found")
-			endif ()
-			pkg_check_modules(WAYLAND_PROTOCOLS REQUIRED wayland-protocols)
-			if (NOT WAYLAND_PROTOCOLS_FOUND)
-				message(FATAL_ERROR "Wayland protocols package not found")
-			endif ()
-			find_program(WAYLAND_SCANNER wayland-scanner)
-			if (NOT WAYLAND_SCANNER)
-				message(FATAL_ERROR "wayland-scanner binary not found")
-			endif ()
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WAYLAND_KHR")
-			include_directories(${WAYLAND_INCLUDE_DIR})
-			execute_process(COMMAND ${PKG_CONFIG} --variable=pkgdatadir wayland-protocols OUTPUT_VARIABLE protocol_dir OUTPUT_STRIP_TRAILING_WHITESPACE)
-			execute_process(COMMAND ${WAYLAND_SCANNER} client-header ${protocol_dir}/stable/xdg-shell/xdg-shell.xml ${CMAKE_BINARY_DIR}/xdg-shell-client-protocol.h
-					COMMAND ${WAYLAND_SCANNER} private-code ${protocol_dir}/stable/xdg-shell/xdg-shell.xml ${CMAKE_BINARY_DIR}/xdg-shell-protocol.c)
-			include_directories(${CMAKE_BINARY_DIR})
-		ELSE(USE_D2D_WSI)
-			find_package(XCB REQUIRED)
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR")
-		ENDIF(USE_D2D_WSI)
-	ELSEIF(APPLE)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_MACOS_MVK -DVK_EXAMPLE_XCODE_GENERATED")
-		# Todo : android?
-	ENDIF(WIN32)
+IF(UNIX AND NOT APPLE)
+	set(LINUX TRUE)
+ENDIF()
 
+IF(WIN32)
 	IF (NOT Vulkan_FOUND)
-		message(FATAL_ERROR "Could not find Vulkan library!")
-	ELSE()
-		message(STATUS ${Vulkan_LIBRARY})
-	ENDIF()
-
-	# Set preprocessor defines
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX -D_USE_MATH_DEFINES")
-
-	# Clang specific stuff
-	if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-switch-enum")
-	endif()
-
-
-	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-	set(CMAKE_CXX_STANDARD 11)
-	set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-	file(GLOB SOURCE *.cpp )
-
-	if(RESOURCE_INSTALL_DIR)
-		add_definitions(-DVK_EXAMPLE_DATA_DIR=\"${RESOURCE_INSTALL_DIR}/\")
-		install(DIRECTORY data/ DESTINATION ${RESOURCE_INSTALL_DIR}/)
-	else()
-		add_definitions(-DVK_EXAMPLE_DATA_DIR=\"${CMAKE_SOURCE_DIR}/data/\")
-	endif()
-
-	# Compiler specific stuff
-	IF(MSVC)
-		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
-	ELSEIF(APPLE)
-		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-			SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fobjc-arc -ObjC++")
-		ELSE()
-			SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fobjc-arc -xobjective-c++")
+		find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/libs/vulkan)
+		IF (Vulkan_LIBRARY)
+			set(Vulkan_FOUND ON)
+			MESSAGE("Using bundled Vulkan library version")
 		ENDIF()
-	ENDIF(MSVC)
+	ENDIF()
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
+ELSEIF(LINUX)
+	IF (NOT Vulkan_FOUND)
+		find_library(Vulkan_LIBRARY NAMES vulkan HINTS "$ENV{VULKAN_SDK}/lib" "${CMAKE_SOURCE_DIR}/libs/vulkan" REQUIRED)
+		IF (Vulkan_LIBRARY)
+			set(Vulkan_FOUND ON)
+			MESSAGE("Using bundled Vulkan library version")
+		ENDIF()
+	ENDIF()
+	find_package(Threads REQUIRED)
+	IF(USE_D2D_WSI)
+		MESSAGE("Using direct to display extension...")
+		add_definitions(-D_DIRECT2DISPLAY)
+	ELSEIF(USE_DIRECTFB_WSI)
+		find_package(DirectFB REQUIRED)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_DIRECTFB_EXT")
+		include_directories(${DIRECTFB_INCLUDE_DIR})
+	ELSEIF(USE_WAYLAND_WSI)
+		find_program(PKG_CONFIG pkg-config)
+		if (NOT PKG_CONFIG)
+			message(FATAL_ERROR "pkg-config binary not found")
+		endif ()
+		find_package(Wayland REQUIRED)
+		if (NOT WAYLAND_FOUND)
+			message(FATAL_ERROR "Wayland development package not found")
+		endif ()
+		pkg_check_modules(WAYLAND_PROTOCOLS REQUIRED wayland-protocols)
+		if (NOT WAYLAND_PROTOCOLS_FOUND)
+			message(FATAL_ERROR "Wayland protocols package not found")
+		endif ()
+		find_program(WAYLAND_SCANNER wayland-scanner)
+		if (NOT WAYLAND_SCANNER)
+			message(FATAL_ERROR "wayland-scanner binary not found")
+		endif ()
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WAYLAND_KHR")
+		include_directories(${WAYLAND_INCLUDE_DIR})
+		execute_process(COMMAND ${PKG_CONFIG} --variable=pkgdatadir wayland-protocols OUTPUT_VARIABLE protocol_dir OUTPUT_STRIP_TRAILING_WHITESPACE)
+		execute_process(COMMAND ${WAYLAND_SCANNER} client-header ${protocol_dir}/stable/xdg-shell/xdg-shell.xml ${CMAKE_BINARY_DIR}/xdg-shell-client-protocol.h
+				COMMAND ${WAYLAND_SCANNER} private-code ${protocol_dir}/stable/xdg-shell/xdg-shell.xml ${CMAKE_BINARY_DIR}/xdg-shell-protocol.c)
+		include_directories(${CMAKE_BINARY_DIR})
+	ELSE(USE_D2D_WSI)
+		find_package(XCB REQUIRED)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR")
+	ENDIF(USE_D2D_WSI)
+ELSEIF(APPLE)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_MACOS_MVK -DVK_EXAMPLE_XCODE_GENERATED")
+	# Todo : android?
+ENDIF(WIN32)
 
-	IF(WIN32)
-		# Nothing here (yet)
-	ELSEIF(APPLE)
-		link_libraries(${Vulkan_LIBRARY} "-framework AppKit" "-framework QuartzCore")
-	ELSE(WIN32)
-		link_libraries(${XCB_LIBRARIES} ${Vulkan_LIBRARY} ${Vulkan_LIBRARY} ${DIRECTFB_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-	ENDIF(WIN32)
+IF (NOT Vulkan_FOUND)
+	message(FATAL_ERROR "Could not find Vulkan library!")
+ELSE()
+	message(STATUS ${Vulkan_LIBRARY})
+ENDIF()
 
-	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
+# Set preprocessor defines
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX -D_USE_MATH_DEFINES")
 
-	add_subdirectory(vulkan/base)
-##################
+# Clang specific stuff
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-switch-enum")
 endif()
 
 
+add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+file(GLOB SOURCE *.cpp )
+
+# Build all examples
+if(build_example)
+	function(buildExamples)
+		foreach(EXAMPLE ${EXAMPLES})
+			buildExample(${EXAMPLE})
+		endforeach(EXAMPLE)
+	endfunction(buildExamples)
+endif()
+
+if(RESOURCE_INSTALL_DIR)
+	add_definitions(-DVK_EXAMPLE_DATA_DIR=\"${RESOURCE_INSTALL_DIR}/\")
+	install(DIRECTORY data/ DESTINATION ${RESOURCE_INSTALL_DIR}/)
+else()
+	add_definitions(-DVK_EXAMPLE_DATA_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/vulkan/data/\")
+endif()
+
+# Compiler specific stuff
+IF(MSVC)
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
+ELSEIF(APPLE)
+	if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fobjc-arc -ObjC++")
+	ELSE()
+		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fobjc-arc -xobjective-c++")
+	ENDIF()
+ENDIF(MSVC)
+
+IF(WIN32)
+	# Nothing here (yet)
+ELSEIF(APPLE)
+	link_libraries(${Vulkan_LIBRARY} "-framework AppKit" "-framework QuartzCore")
+ELSE(WIN32)
+	link_libraries(${XCB_LIBRARIES} ${Vulkan_LIBRARY} ${Vulkan_LIBRARY} ${DIRECTFB_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+ENDIF(WIN32)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
+
+add_subdirectory(vulkan/base)
+
+if(build_example)
+	add_subdirectory(vulkan/examples)
+endif()
+
+if(build_example)
+	set(EXAMPLES
+		bloom
+		computecloth
+		computecullandlod
+		computeheadless
+		computenbody
+		computeparticles
+		computeraytracing
+		computeshader
+		conditionalrender
+		conservativeraster
+		debugmarker
+		deferred
+		deferredmultisampling
+		deferredshadows
+		descriptorindexing
+		descriptorsets
+		displacement
+		distancefieldfonts
+		dynamicuniformbuffer
+		gears
+		geometryshader
+		gltfloading
+		gltfscenerendering
+		gltfskinning
+		hdr
+		imgui
+		indirectdraw
+		inlineuniformblocks
+		inputattachments
+		instancing
+		multisampling
+		multithreading
+		multiview
+		negativeviewportheight	
+		occlusionquery
+		offscreen
+		oit
+		parallaxmapping
+		particlefire
+		pbrbasic
+		pbribl
+		pbrtexture
+		pipelines
+		pipelinestatistics
+		pushconstants
+		pushdescriptors
+		radialblur
+		rayquery
+		raytracingbasic
+		raytracingcallable
+		raytracingreflections
+		raytracingshadows	
+		renderheadless
+		screenshot
+		shadowmapping
+		shadowmappingomni
+		shadowmappingcascade
+		specializationconstants
+		sphericalenvmapping
+		ssao
+		stencilbuffer
+		subpasses
+		terraintessellation
+		tessellation
+		textoverlay
+		texture
+		texture3d
+		texturearray
+		texturecubemap
+		texturecubemaparray
+		texturemipmapgen
+		texturesparseresidency
+		triangle
+		variablerateshading
+		viewportarray
+		vulkanscene
+		)
+		set_property(TARGET ${EXAMPLES} PROPERTY FOLDER "Example")
+endif()
+
+###########################
 
 
 # vulkan
