hiz culling beta

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,18 +1,3 @@
-SetTarget(
-    MODE EXE
-    TARGET_NAME LSRViewer
-    INC
-        ${PROJECT_SOURCE_DIR}/source
-        ${PROJECT_SOURCE_DIR}/extern/vulkan/base
-    LIB
-        base
-        glm
-        ktx
-        imgui_lib
-        entt
-        tinygltf
-        vulkan
-        ctpl
-)
-
-set_property(TARGET LSRViewer PROPERTY FOLDER )
+add_subdirectory(app)
+add_subdirectory(renderer)
+add_subdirectory(scene)
