--- a/source/renderer/CMakeLists.txt
+++ b/source/renderer/CMakeLists.txt
@@ -6,6 +6,7 @@ SetTarget(
         ${PROJECT_SOURCE_DIR}/extern/vulkan/base
     LIB
         scene
+        shader_compiler
 )
 
 set_property(TARGET renderer PROPERTY FOLDER "LSRViewer")
