--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -91,6 +91,7 @@ ENDIF()
 
 # Set preprocessor defines
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX -D_USE_MATH_DEFINES")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX")
 
 # Clang specific stuff
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
