--- a/source/app/CMakeLists.txt
+++ b/source/app/CMakeLists.txt
@@ -1,6 +1,8 @@
 SetTarget(
     MODE EXE
     TARGET_NAME app
+    DEFINE
+        PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}/"
     INC
         ${PROJECT_SOURCE_DIR}/source
         ${PROJECT_SOURCE_DIR}/extern/vulkan/base
