--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "extern/vulkan"]
 	path = extern/vulkan
-	url = https://github.com/SaschaWillems/Vulkan
+	url = https://github.com/Chaphlagical/Vulkan
 [submodule "extern/entt"]
 	path = extern/entt
 	url = https://github.com/skypjack/entt
