--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -19,7 +19,7 @@ set(RESOURCE_INSTALL_DIR "" CACHE PATH "Path to install resources to (leave empt
 # Use FindVulkan module added with CMAKE 3.7
 if (NOT CMAKE_VERSION VERSION_LESS 3.7.0)
 	message(STATUS "Using module to find Vulkan")
-	find_package(Vulkan)
+	#find_package(Vulkan)
 endif()
 
 IF(UNIX AND NOT APPLE)
@@ -28,7 +28,7 @@ ENDIF()
 
 IF(WIN32)
 	IF (NOT Vulkan_FOUND)
-		find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/libs/vulkan)
+		find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS vulkan/libs/vulkan)
 		IF (Vulkan_LIBRARY)
 			set(Vulkan_FOUND ON)
 			MESSAGE("Using bundled Vulkan library version")
@@ -37,7 +37,7 @@ IF(WIN32)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
 ELSEIF(LINUX)
 	IF (NOT Vulkan_FOUND)
-		find_library(Vulkan_LIBRARY NAMES vulkan HINTS "$ENV{VULKAN_SDK}/lib" "${CMAKE_SOURCE_DIR}/libs/vulkan" REQUIRED)
+		find_library(Vulkan_LIBRARY NAMES vulkan HINTS "$ENV{VULKAN_SDK}/lib" "vulkan/libs/vulkan" REQUIRED)
 		IF (Vulkan_LIBRARY)
 			set(Vulkan_FOUND ON)
 			MESSAGE("Using bundled Vulkan library version")
