--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
       run: cmake -H"." -B"build/${{ matrix.platform }}"
 
     - name: "Build ${{ matrix.platform }} in ${{ matrix.build_type }}"
-      run: cmake --build "build/${{ matrix.platform }}" --target app --config ${{ matrix.build_type }} ${{ env.PARALLEL }}
+      run: cmake --build "build/${{ matrix.platform }}" --target ALL_BUILD --config ${{ matrix.build_type }} ${{ env.PARALLEL }}
